--- a/tarea-2/punto-3.ipynb
+++ b/tarea-2/punto-3.ipynb
@@ -281,8 +281,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dadas estas dos ecuaciones diferenciales de segundo orde"
+    "Dadas estas dos ecuaciones diferenciales de segundo orden, despejemos $\\ddot{\\tau}$ y $\\ddot{\\sigma}$:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
