--- a/proyecto-final/avance-1/hip.ipynb
+++ b/proyecto-final/avance-1/hip.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "sqrt(x**2 + y(x)**2)/r_0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "sqrt(x**2 + y(x)**2)*sqrt(Derivative(y(x), x) + 1)/r_0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "sqrt(Derivative(y(x), x) + 1)*y(x)/(r_0*sqrt(x**2 + y(x)**2))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "sqrt(x**2 + y(x)**2)/(2*r_0*sqrt(Derivative(y(x), x) + 1))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "(x + y(x)*Derivative(y(x), x))/(2*r_0*sqrt(x**2 + y(x)**2)*sqrt(Derivative(y(x), x) + 1)) - sqrt(x**2 + y(x)**2)*Derivative(y(x), (x, 2))/(4*r_0*(Derivative(y(x), x) + 1)**(3/2))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "Eq(sqrt(Derivative(y(x), x) + 1)*y(x)/(r_0*sqrt(x**2 + y(x)**2)), (2*(x + y(x)*Derivative(y(x), x))*(Derivative(y(x), x) + 1) - (x**2 + y(x)**2)*Derivative(y(x), (x, 2)))/(4*r_0*sqrt(x**2 + y(x)**2)*(Derivative(y(x), x) + 1)**(3/2)))"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "[2*(x*Derivative(y(x), x) + x - y(x)*Derivative(y(x), x)**2 - 3*y(x)*Derivative(y(x), x) - 2*y(x))/(x**2 + y(x)**2)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,6 +194,31 @@
    "source": [
     "sln = smp.solve(EL, d2y)\n",
     "sln"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{A: 11, B: 130/9}]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a,b = smp.symbols('A,B')\n",
+    "k=3\n",
+    "EQ1 = smp.Eq(5**2, k**2 * b - (1 + a)**2)\n",
+    "EQ2 = smp.Eq(5**2, k**2 * b - (6 + a)**2)\n",
+    "\n",
+    "smp.solve([EQ1, EQ2], (a,b), dict=True)"
    ]
   }
  ],
