--- a/tarea-2/extras-sympy.ipynb
+++ b/tarea-2/extras-sympy.ipynb
@@ -10,9 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\\hat{\\mathbf{e}}_{\\tau}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sympy as smp\n",
     "from sympy.physics.mechanics import *\n",
@@ -626,13 +637,6 @@
     "a_parabolic = smp.diff(v_parabolic, t).subs(partialderivatives).simplify().factor(e_t, e_s)\n",
     "a_parabolic"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
